--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,10 @@ jobs:
       - attach_workspace:
          at: ./output
       
-      - run: sudo apt update
-      
-      - run: sudo apt install rsync
-      
-      - run: pip install pexpect
+      - run: pip install awscli
 
-      - run: python src/upload.py
+      - run:  make circle_upload
+
 
 
 
